--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Career Guidance</title>
+  <title>Guidant</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!--Custom CSS-->
   <link rel="stylesheet" href="CSS/styles.css" type="text/css">
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" id="text" href="#">Career <span class="brand">Guidance</span></a>
+      <a class="navbar-brand" id="text" href="#">Faiz <span class="brand">Guidant</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -48,7 +48,7 @@
                      </div>
                      <div class="more">
                          <a href="#about">
-                            <button class="btn" id="btns">About Career <span class="brand">Guidance</span></button>
+                            <button class="btn" id="btns" href="https://github.com/faizz11">About Career <span class="brand">Guidant</span></button>
                          </a>
                      </div>
                  </div>
@@ -78,7 +78,7 @@
                     globe.<br>We guarantee you a blissful experience as we help you navigate the perilous waters of life after high school on this great journey.<br>Join us and be part of the experience.<br> </p>
                 </div>
                 <div class="login">
-                  <a href="login.html">
+                  <a href="./interest.html">
                     <button type="button" class="btn btn-dark" id="btns">Let's Begin</button>
                   </a>
                 </div>
@@ -96,18 +96,18 @@
               <li>
                 <span><img src="Images/location.png" /></span>
                 <span
-                  >1000 Kenyatta Avenue<br />
-                  Nairobi, Kenya<br />
-                  19900</span
+                  >Mira Road<br />
+                  Shanti Park<br />
+                  401107</span
                 >
               </li>
               <li>
                 <span><img src="Images/mail.png" /></span>
-                <span>moringa@student.com</span>
+                <span>faiz.k.moulavi@slrtce.in</span>
               </li>
               <li>
                 <span><img src="Images/call.png" /></span>
-                <span>07-22-66-89-17</span>
+                <span>9136261589</span>
               </li>
             </ul>
             <ul class="social-media">
